--- a/package.json
+++ b/package.json
@@ -1,35 +1,65 @@
 {
   "name": "myportal2025",
-  "version": "0.0.0",
-  "description": "multipurpose app",
-  "main": "server.js",
-  "scripts": {
-    "webpack": "webpack",
-    "start": "node server.js"
-  },
+  "version": "0.0.1",
+  "description": "Paper Question Sheets for Math and Music.",
+  "author": "Arjun",
+  "private": false,
   "repository": {
     "type": "git",
     "url": "https://github.com/Mallikarjunarao-Git2025/myportal2025"
   },
-  "author": "Christophe Coenraets",
-  "bugs": {
-    "url": "https://github.com/Mallikarjunarao-Git2025/myportal2025/issues"
-  },
-  "homepage": "https://github.com/Mallikarjunarao-Git2025/myportal2025",
-  "dependencies": {
-    "compression": "^1.6.2",
-    "express": "^4.14.0",
-    "path": "^0.12.7",
-    "pg": "^6.0.2"
-  },
   "devDependencies": {
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "react": "^15.2.0",
-    "react-dom": "^15.2.0",
-    "react-slider": "^0.6.1",
-    "webpack": "^1.13.1"
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
+    "babel-preset-env": "^1.7.0",
+    "cryptiles": ">=4.1.2",
+    "eslint": "^5.6.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "gh-pages": "^2.0.1",
+    "now": "^13.0.0",
+    "parcel-bundler": "^1.11.0",
+    "parcel-plugin-clean-dist": "0.0.6",
+    "surge": "^0.20.1"
+  },
+  "babel": {
+    "presets": [
+      "env"
+    ]
+  },
+  "scripts": {
+    "lint": "eslint --ignore-pattern '/dist/*' .",
+    "dev": "parcel index.html",
+    "build": "parcel build index.html",
+    "heroku-postbuild": "parcel build index.html",
+    "surge": "surge",
+    "build-gh-pages": "parcel build index.html --public-url /myportal2025",
+    "deploy-gh-pages": "gh-pages -d dist",
+    "now": "now",
+    "now-from-dist": "now --name myportal2025 deploy ./dist",
+    "now-alias": "now alias https://myportal2025.now.sh",
+    "now-build": "parcel build index.html"
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "parserOptions": {
+      "ecmaVersion": 7,
+      "sourceType": "module"
+    },
+    "env": {
+      "es6": true,
+      "node": true
+    },
+    "extends": "airbnb-base",
+    "rules": {
+      "import/no-unresolved": "off",
+      "import/extensions": "off",
+      "import/prefer-default-export": "off",
+      "import/no-default-export": "off"
+    }
+  },
+  "license": "UNLICENSE",
+  "dependencies": {
+    "abcjs": "^5.6.1"
   }
 }
